--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+  background-image: url("https://images.unsplash.com/photo-1493038950213-29266628eb06?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjF8fHNvY2NlciUyMGZpZWxkLiUyMG5pZ2h0fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60");
+  background-size: cover;
+}
+
 .container {
   width: 400px;
   margin-left: auto;
